WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246865
[web-animations] updating timing should invalidate the effect
https://bugs.webkit.org/show_bug.cgi?id=246865
Summary
[web-animations] updating timing should invalidate the effect
Antoine Quint
Reported
2022-10-21 10:37:08 PDT
We have a test failure in web-animations/animation-model/keyframe-effects/effect-value-iteration-composite-operation.html due to not invalidating the effect when AnimationEffect.updateTiming() is called and timing properties change.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-10-21 10:40:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5636
EWS
Comment 2
2022-10-21 22:23:02 PDT
Committed
255863@main
(705266f62fe8): <
https://commits.webkit.org/255863@main
> Reviewed commits have been landed. Closing PR #5636 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-10-21 22:24:19 PDT
<
rdar://problem/101453609
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug