[web-animations] updating timing should invalidate the effect https://bugs.webkit.org/show_bug.cgi?id=246865

Reviewed by Dean Jackson.

Since timing properties affect how the effect value is computed, we need to invalidate
the effect when those properties change. It's pretty amazing that this wasn't caught by
an existing WPT, but implementing iterationComposite surfaced that issue.

* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/keyframe-effects/effect-value-iteration-composite-operation-expected.txt:
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::animationDidChangeTimingProperties):

Canonical link: https://commits.webkit.org/255863@main